# FrenchCryptoTaxes

./: .gitignore  Cargo.toml  README.md  rustfmt.toml
src/: main.rs
src/api/: mod.rs
src/api/exchanges/: bitfinex.rs  kraken.rs  kraken_api.rs  mod.rs
src/api/explorers/: solana_rpc.rs
src/api/mapping/: kraken.rs  kraken_mapping.rs  mod.rs
src/api/services/: get_price.rs  kraken.rs  kraken_service.rs  mod.rs
src/errors/: api.rs  io_error.rs  mapping.rs  mod.rs  portfolio_history_error.rs
src/functions/: check_missing_trades.rs  mod.rs  pfu.rs  wallet_balance.rs
src/parsing/: mod.rs
src/parsing/tools/: koinly.rs  mod.rs
src/structs/: cost_basis.rs  currency.rs  mod.rs  portfolio.rs  portfolio_manager.rs  simple_decimal.rs  transaction.rs  transactions_manager.rs  wallet.rs  wallet_manager.rs
src/structs/managers/: global_cost_basis_manager.rs  mod.rs  persistable.rs  portfolio_manager.rs  taxable_managers.rs  transactions_manager.rs  wallet_manager.rs
src/tests/: mod.rs  simple_integration_test.rs
src/utils/: files.rs  mod.rs  time.rs
