[package]
name = "cryptotaxes"
version = "0.1.0"
edition = "2021"

[dependencies]
base64 = "0.22.1"
chrono = { version = "0.4.38", features = ["serde"] } 
csv = "1.3.0"
dotenv = "0.15.0"
form_urlencoded = "1.2.1"
hex = "0.4.3"
hmac = "0.12.1"
reqwest = { version = "0.12.4", features = ["json"] }
rust_decimal = "1.35.0"
rust_decimal_macros = "1.34.2"
serde = {version="1.0.201", features = ["derive"]} 
serde_json = "1.0.117"
sha2 = "0.10.8"
tokio = { version = "1.37.0", features = ["full"] }
